--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "wait-on": "^8.0.3"
   },
   "dependencies": {
+    "@tabler/core": "^1.2.0",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
+    "bootstrap-icons": "^1.12.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   }
