--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
     "bootstrap-icons": "^1.12.1",
+    "sweetalert2": "^11.21.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   }
