--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
     "bootstrap-icons": "^1.12.1",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.21.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
