--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "better-sqlite3": "^11.9.1",
     "bootstrap-icons": "^1.12.1",
     "chart.js": "^3.9.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "recharts": "^2.15.3",
     "sweetalert2": "^11.21.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-chartjs": "^4.1.2",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   }
 }
